# hammer-sickle

./: CUSTOMIZING.org  Cargo.toml  GETTING_STARTED.org  README.org  config.example.toml  flake.nix  llms.org
.cargo-husky/hooks/: pre-commit
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  foreman.rs  logging.rs  main.rs  ssh.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
src/: cli.rs  error.rs  foreman.rs  main.rs  ssh.rs
