[package]
name = "hammer-sickle"
version = "0.1.0"
authors = ["Logan Barnett <logustus@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["env", "derive", "wrap_help"] }
clap-verbosity-flag = "2.2.0"
log = "0.4.21"
owo-colors = "4.0.0"
partial_application = "0.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
stderrlog = "0.6.0"
tap = "1.0.1"
