[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Logan Barnett <logustus@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Utilities - enables method chaining and reduces superfluous local variables
# that only exist to name intermediate results
tap = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Concurrency
rayon = "1.10"

# Shared library
hammer-sickle-lib = { path = "crates/lib" }
hash-color-lib = { git = "ssh://git@gitea.proton:2222/logan/hash-color.git" }
