[package]
name = "hammer-sickle-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hammer-sickle"
path = "src/main.rs"

[dependencies]
hammer-sickle-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
